# rust_ray_tracer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
report/: .gitignore  report.tex  sources.bib
src/: geometry.rs  main.rs  material.rs  renderer.rs
src/geometry/: hittable.rs  material.rs  ray.rs  sphere.rs  vec3.rs
src/geometry/hittable/: hitable_list.rs  plane.rs  sphere.rs
src/geometry/material/: metal.rs
src/material/: dialectric.rs  lambertian.rs  metal.rs  mod.rs
src/renderer/: camera.rs
