[package]
name = "rust_ray_tracer"
version = "0.1.0"
edition = "2021"
authors = ["Zach Clayburn <zachclayburn@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["std", "color", "suggestions", "cargo", "wrap_help", "derive"] }
image = "0.24.1"
indicatif = "0.16.2"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev_dependencies]
pretty_assertions = "1.2.1"
